[package]
name = "puncfix"
version = "0.1.0"
edition = "2021"
authors = ["okuyama"]
description = "句読点「、」「。」を「, 」「. 」に変換します. "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = [ "derive" ] }
dialoguer = "0.10.4"